Switch to cross fade effect for slider to fix scrollbar

--- a/backend/todi/js/src/App.css
+++ b/backend/todi/js/src/App.css
@@ -5,7 +5,7 @@
 .text {
   text-align: center;
 	/* position: relative; */
-	margin-bottom: .5em;
+	/* margin-bottom: .5em; */
 }
 
 .annotatable {
@@ -20,10 +20,8 @@
 }
 
 .box {
-  position: relative;
   display: block;
   margin-top: 0.1em;
-  position: relative;
   background-color: lightgreen;
   height: 1.5em;
   border-radius: 10%;
@@ -53,7 +51,6 @@
 
 .dropdown {
   display: none;
-  position: relative;
   left: -50%;
   background-color: #f2f2f2;
   border-radius: 3%;
@@ -83,9 +80,9 @@
 }
 
 .button-container {
-  margin-top: 1em;
   padding-left: 3em;
 	position: relative;
+	margin-top: 0;
 }
 
 .button-container > button {
@@ -94,17 +91,4 @@
   margin: 0 0.2em;
   font-size: 0.6em;
   padding: 7px;
-}
-
-swiper-container {
-	overflow: visible !important;
-}
-
-swiper-slide {
-	opacity: 0;
-	transition: opacity 0.5s;
-}
-
-.swiper-slide-active {
-	opacity: 1;
 }
